<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roomspeaker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="buttonlabel1">EG</string>
    <string name="buttonlabel2">Gäste-WC</string>
    <string name="buttonlabel3">Küche</string>
    <string name="buttonlabel4">Wohnzimmer</string>
    <string name="buttonlabel5">Terrasse</string>

    <string name="buttonlabel6">OG</string>
    <string name="buttonlabel7">Schlafzimmer</string>
    <string name="buttonlabel8">Bad</string>
    <string name="buttonlabel9">Kinderzimmer</string>
    <string name="buttonlabel10">Büro</string>

    <string name="buttonlabel11">DG</string>
    <string name="buttonlabel12">Treppenhaus</string>
    <string name="buttonlabel13">Studio</string>
    <string name="buttonlabel14">Waschraum</string>

    <string name="buttonlabel15">Alles</string>

    <string name="menu_preferences">Einstellungen</string>
    <string name="menu_refresh">Aktualisieren</string>
    
    <string name="title_settings">Einstellungen</string>
    <string name="settings_close">Beenden</string>

    <string name="settings_url_text">192.168.0.170</string>
    <string name="settings_url_label">Verbindungsurl :</string>

    <string name="settings_refreshtime_text">10</string>
    <string name="settings_refreshtime_label">Aktualisierungsrate :</string>

    <string name="settings_save_button">Speichern</string>
    <string name="settings_cancel_button">Abbrechen</string>
    <string name="settings_backup_button">Zurücksetzen</string>


    
    
    
    <color name="white">#FFFFFF</color>
    <color name="gray">#878787</color>
    <color name="black">#000000</color>

</resources>
